sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:4: error: not found: type int
  var end:int=getValueCount()-2;
          ^